--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-# Required python packages. You can install them all via something like:
-#    pip install -r requirements.txt
+# python packages. You can install them all via something like:
+#  randomword  pip install -r requirements.txt
 
 # Numpy must be fully installed before many of the other packages will install,
 # So you may well have to do this one manually first, before using this requirements file.
